fix(ux): selected code contrast issue

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -39,6 +39,9 @@
     --ring         : #13343b;
     --ring-darker  : #13343b80;
 
+    --selection           : #13343b60;
+    --selection-foreground: #fcfcf9;
+
     --radius: 0.5rem;
 
     --ui-font  : "Karla", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -77,6 +80,9 @@
     --input        : #3d3f40;
     --ring         : #72aefd;
     --ring-darker  : #72aefd80;
+
+    --selection           : #202222;
+    --selection-foreground: #72aefd;
   }
 }
 
