--- a/src/content-script/base.css
+++ b/src/content-script/base.css
@@ -96,8 +96,8 @@ html.dark,
 .selection\:bg-superDuper::selection,
 .selection\:text-textMain ::selection,
 .dark .dark\:selection\:text-super ::selection {
-  background-color: var(--secondary) !important;
-  color           : var(--accent-foreground) !important;
+  background-color: var(--selection) !important;
+  color           : var(--selection-foreground) !important;
 }
 
 .fill-super,
@@ -183,6 +183,13 @@ html.dark {
   background-color: var(--secondary) !important;
 }
 
+html.dark {
+
+  & code::selection,
+  & code *::selection {
+    background: var(--accent-foreground-darker) !important;
+  }
+}
 
 .mb-sm.flex.w-full.items-center.justify-between svg {
   color: var(--accent-foreground);
